DiD S1: update dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -50,7 +50,7 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my... help. For now, however, I ask only to rest in your town for a few days.”</i>"
+            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my... help. For now, however, I ask only to refresh myself in your town.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
@@ -265,9 +265,7 @@
 
         [message]
             speaker=Malin Keshar
-            # wmllint: local spelling stewpots
-            # po: stewpots means a big pot that orcs cook things in, like humans in this case
-            message= _ "No, Drogan. I raised this corpse with the skills Darken Volk taught me before he left. While I have no love for it, without the help of the dead, we consign ourselves and our families to orcish stewpots!"
+            message= _ "No, Drogan. I raised this corpse with the skills Darken Volk taught me before he left. While I have no love for it, we cannot hope to repel the orcs without the help of the dead!"
         [/message]
 
         [message]
