--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg
@@ -512,7 +512,6 @@
                         [/command]
                     [/option]
 
-                    # TODO: prevent the time over defeat if this is chosen...
                     [option]
                         label= _ "Let’s finish off the rest of these monsters!"
                     [/option]
@@ -544,11 +543,37 @@
 
     [event]
         name=time over
-        [message]
-            speaker=Prince Haldric
-            message= _ "More saurians are arriving. They’ve surrounded us! We’re doomed."
-            image=portraits/haldric-surprised.png
-        [/message]
+
+        [if]
+            [variable]
+                name=dragon_dead
+                numerical_equals=0
+            [/variable]
+            [then]
+                [message]
+                    speaker=Prince Haldric
+                    message= _ "More saurians are arriving. They’ve surrounded us! We’re doomed."
+                    image=portraits/haldric-surprised.png
+                [/message]
+            [/then]
+            [else]
+                [message]
+                    speaker=Lady Jessene
+                    message= _ "We already killed the dragon. We really don’t need to be spending this much time chasing down the rest of these lizards."
+                [/message]
+
+                [message]
+                    speaker=Prince Haldric
+                    message= _ "You’re right, you’re right. Let’s head back."
+                [/message]
+
+                [endlevel]
+                    result=victory
+                    bonus=yes
+                    {NEW_GOLD_CARRYOVER 40}
+                [/endlevel]
+            [/else]
+        [/if]
     [/event]
 [/scenario]
 
