--- a/data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg
@@ -412,33 +412,6 @@
         [/gold]
     [/event]
 
-    #TODO: Uncomment when we'll have translations for this
-    #seeing the trapped orcs
-    #[event]
-    #    name=sighted
-    #    [filter]
-    #        side=3,4
-    #    [/filter]
-    #    [filter_second]
-    #        side=1
-    #    [/filter_second]
-    #    [filter_condition]
-    #        [variable]
-    #            name=overlayturn
-    #            equals=not_yet
-    #        [/variable]
-    #    [/filter_condition]
-
-    #    [message]
-    #        id=Rugnur
-    #        message= _ "Look, those orcs can’t get to us! There’s cave wall in the way!"
-    #    [/message]
-    #    [message]
-    #        id=Thursagan
-    #        message= _ "True; but, perhaps later they will find a way out."
-    #    [/message]
-    #[/event]
-
     #seeing the guards of the glyph
     [event]
         name=sighted
@@ -576,9 +549,7 @@
         [objectives]
             side=1
             [objective]
-                #TODO: Provide a different objective, since the player doesn't have
-                # to kill the elves anymore
-                description= _ "Kill all of the elves before one of them escapes from the caves"
+                description= _ "Survive as long as possible"
                 condition=win
             [/objective]
             [objective]
