--- a/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
@@ -322,7 +322,7 @@
                 description= _ "Rescue at least two merfolk by turn 16"
                 condition=win
                 [show_if]
-                    {VARIABLE_CONDITIONAL turn_number less_than 16}
+                    {VARIABLE_CONDITIONAL number_merfolk_caged greater_than 0}
                 [/show_if]
             [/objective]
             [objective]
