--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -504,6 +504,7 @@
 
         [message]
             speaker=Mel Daveth
+            # usage of mermen here is deliberate
             message= _ "The mermen...they came back! Bring back the search parties! Call back the hordes!"
         [/message]
 
