TSG: change references of mermen to merfolk

--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -399,7 +399,7 @@
     [/event]
 #endif
 
-    # Mermen - You find mermen who will become allies and protect your waterways.
+    # Merfolk - You find merfolk who will become allies and protect your waterways.
 
     [event]
         name=moveto
@@ -462,7 +462,7 @@
         [message]
             speaker=narrator
             image="units/merfolk/hunter.png~RC(magenta>red)"
-            message= _ "You may now recruit Merman Hunters. Mermen are aquatic creatures and fight best in rivers and swamps. They are much less effective on dry land."
+            message= _ "You may now recruit Merman Hunters. Merfolk are aquatic creatures and fight best in rivers and swamps. They are much less effective on dry land."
         [/message]
 #endif
 
@@ -470,7 +470,7 @@
             side=1
             type=Merman Hunter
         [/allow_recruit]
-        {VARIABLE has_mermen "yes"}
+        {VARIABLE has_merfolk "yes"}
     [/event]
 
     # Dusk - Sir Gerrick suggests that you should hold the north banks of the river.
