--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -1118,7 +1118,7 @@
                     image=portraits/deoran-sad.png
                     message= _ "Then we shall retreat towards Westin and prepare for the oncoming battle. I pray our only chance at victory was not lost today."
                 [/message]
-                {CLEAR_VARIABLE side_with_bandits,found_urza_afalas,has_mermen,know_about_lich}
+                {CLEAR_VARIABLE side_with_bandits,found_urza_afalas,know_about_lich}
                 [endlevel]
                     result=victory
                     next_scenario=06b_The_Long_March
