HttT: change mermen to merfolk/mer

--- a/data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg
@@ -555,7 +555,7 @@
 #endif
         [message]
             speaker=Gwimli
-            message= _ "Thank you for rescuing us! Now we can help you fight the evil orcs! The main cage where they keep most of the mermen is in the northwest!"
+            message= _ "Thank you for rescuing us! Now we can help you fight the evil orcs! The main cage where they keep most of the merfolk is in the northwest!"
         [/message]
     [/event]
 
@@ -665,7 +665,7 @@
         [message]
             speaker=Konrad
             {KONRAD_VARIATION_ELF glad}
-            message= _ "At last, we have freed the mermen. Go back to the ocean and live in peace."
+            message= _ "At last, we have freed the merfolk. Go back to the ocean and live in peace."
         [/message]
 #define MERMAN_SPEAKS
     [role]
