--- a/data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg
@@ -245,7 +245,7 @@
         [message]
             speaker=narrator
             image=wesnoth-icon.png
-            message= _ "One day they saw a gruesome sight — a fleet of boats and rafts sunk or shattered among the river islands. Konrad sent some of the mermen to investigate."
+            message= _ "One day they saw a gruesome sight — a fleet of boats and rafts sunk or shattered among the river islands. Konrad sent some of the merfolk to investigate."
         [/message]
         [message]
             role=merman-advisor
@@ -338,7 +338,7 @@
         [/message]
         [message]
             role=merman-advisor
-            # po: Yes, "Eastern Shore" is correct. Mermen are water-oriented;
+            # po: Yes, "Eastern Shore" is correct. Merfolk are water-oriented;
             # po: it's the eastern shore of the Great Ocean.
             message= _ "I was born in the Bay of Pearls and spent my entire life on the Eastern Shore. But I have spoken with those who have traveled the Western Ocean and met drakes on their journeys. Therefore, I am certain beyond doubt that the creature flying in front of us is a drake, Delfador. Concerning the drakes having never been seen in Wesnoth, must I remind you that we are not in Wesnoth anymore? There are many unthinkable things and creatures which can be found outside of Wesnoth."
         [/message]
