HttT: remove Princess as a direct address

--- a/data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg
@@ -351,7 +351,7 @@
         [/message]
         [message]
             speaker="Li'sar"
-            message= _ "And I am Princess Li’sar, the only daughter of the late King Garard II and Queen Asheviere. I too am an heir to the throne of Wesnoth!"
+            message= _ "And I am the Princess, Li’sar, the only daughter of the late King Garard II and Queen Asheviere. I, too, am an heir to the throne of Wesnoth!"
         [/message]
         [message]
             speaker=Keh Ohn
@@ -764,7 +764,7 @@ Soooo... It is you who sent your subordinates to attack us. Now when we’ve des
         [/message]
         [message]
             speaker=Delfador
-            message= _ "Princess Li’sar, do I have to remind you again that it is Konrad, not you, who is the rightful heir?"
+            message= _ "Li’sar, do I have to remind you again that it is Konrad, not you, who is the rightful heir?"
         [/message]
         [message]
             speaker="Li'sar"
@@ -831,7 +831,7 @@ Soooo... It is you who sent your subordinates to attack us. Now when we’ve des
         [/message]
         [message]
             speaker="Li'sar"
-            message= _ "I am Princess Li’sar, and we are friends. Join us and wait for the healers to help you, young sergeant."
+            message= _ "I am the Princess, Li’sar, and we are friends. Join us and wait for the healers to help you, young sergeant."
         [/message]
         [message]
             speaker=Warven
