--- a/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
@@ -173,7 +173,7 @@
                 [/message]
                 [message]
                     speaker=Konrad
-                    message= _ "You still want to fight me, do you, Princess?"
+                    message= _ "You still want to fight me, do you, Li’sar?"
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -185,7 +185,7 @@
                 [/message]
                 [message]
                     speaker=Konrad
-                    message= _ "Indeed there are. We shall have to fight our way out. Are you with us, Princess, or against us?"
+                    message= _ "Indeed there are. We shall have to fight our way out. Are you with us or against us?"
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -205,7 +205,7 @@
                 [/message]
                 [message]
                     speaker=Konrad
-                    message= _ "Yes, we have. Now I suppose you want to use the Sceptre against me, Princess?"
+                    message= _ "Yes, we have. Now I suppose you want to use the Sceptre against me, Li’sar?"
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -213,7 +213,7 @@
                 [/message]
                 [message]
                     speaker=Kalenz
-                    message= _ "With all due respect, Princess, it is once again we who will spare you, Sceptre or no Sceptre."
+                    message= _ "With all due respect, <i>Princess</i>, it is once again we who will spare you, Sceptre or no Sceptre."
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -253,7 +253,7 @@
         [/message]
         [message]
             speaker=Konrad
-            message= _ "And will you join us in seeking refuge with the North Elves, Princess?"
+            message= _ "And will you join us in seeking refuge with the North Elves, Li’sar?"
         [/message]
         [message]
             speaker="Li'sar"
@@ -261,7 +261,7 @@
         [/message]
         [message]
             speaker=Kalenz
-            message= _ "That we will, Princess. Even though you are the daughter of the Queen, our enemy, we shall not harm you on this encounter, for you have helped us."
+            message= _ "That we will. Even though you are the daughter of the Queen, our enemy, we shall not harm you on this encounter, for you have helped us."
         [/message]
         [message]
             speaker=Delfador
