--- a/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
@@ -177,7 +177,7 @@
                 [/message]
                 [message]
                     speaker=Konrad
-                    message= _ "You still want to fight me, do you, Princess?"
+                    message= _ "You still want to fight me, do you, Li’sar?"
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -189,7 +189,7 @@
                 [/message]
                 [message]
                     speaker=Konrad
-                    message= _ "Indeed there are. We shall have to fight our way out. Are you with us, Princess, or against us?"
+                    message= _ "Indeed there are. We shall have to fight our way out. Are you with us or against us?"
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -209,7 +209,7 @@
                 [/message]
                 [message]
                     speaker=Konrad
-                    message= _ "Yes, we have. Now I suppose you want to use the Sceptre against me, Princess?"
+                    message= _ "Yes, we have. Now I suppose you want to use the Sceptre against me, Li’sar?"
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -217,7 +217,7 @@
                 [/message]
                 [message]
                     speaker=Kalenz
-                    message= _ "With all due respect, Princess, it is once again we who will spare you, Sceptre or no Sceptre."
+                    message= _ "With all due respect, <i>Princess</i>, it is once again we who will spare you, Sceptre or no Sceptre."
                 [/message]
                 [message]
                     speaker="Li'sar"
@@ -257,7 +257,7 @@
         [/message]
         [message]
             speaker=Konrad
-            message= _ "And will you join us in seeking refuge with the North Elves, Princess?"
+            message= _ "And will you join us in seeking refuge with the North Elves, Li’sar?"
         [/message]
         [message]
             speaker="Li'sar"
@@ -265,7 +265,7 @@
         [/message]
         [message]
             speaker=Kalenz
-            message= _ "That we will, Princess. Even though you are the daughter of the Queen, our enemy, we shall not harm you on this encounter, for you have helped us."
+            message= _ "That we will. Even though you are the daughter of the Queen, our enemy, we shall not harm you on this encounter, for you have helped us."
         [/message]
         [message]
             speaker=Delfador
