NR: remove Princess as a direct address

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -771,7 +771,7 @@
 
         [message]
             speaker=Hidel
-            message= _ "Princess! We have finally found you!"
+            message= _ "Your Highness! We have finally found you!"
         [/message]
 
         [message]
@@ -781,7 +781,7 @@
 
         [message]
             speaker=Hidel
-            message= _ "They are all here, princess! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands. We will follow you to the end of the world if need be."
+            message= _ "They are all here, my lady! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands. We will follow you to the end of the world if need be."
         [/message]
 
         [message]
@@ -791,7 +791,7 @@
 
         [message]
             speaker=Hidel
-            message= _ "With pleasure, Princess! Quickly men, set up a base!"
+            message= _ "With pleasure! Quickly men, set up a base!"
         [/message]
 
         [terrain]
@@ -1082,7 +1082,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "Princess! We have finally found you! Thank the Bright Gods you are free! Your father had originally sent us to rescue you."
+                    message= _ "Your Highness! We have finally found you! Thank the Bright Gods you are free! Your father had originally sent us to rescue you."
                 [/message]
 
                 [message]
@@ -1127,7 +1127,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "They are all here, princess! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands."
+                    message= _ "They are all here, my lady! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands."
                 [/message]
 
                 [message]
@@ -1137,7 +1137,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "As you wish, princess."
+                    message= _ "As you wish, my lady."
                 [/message]
 
                 [message]
