--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -36,7 +36,7 @@
             story= _ "With tears streaming down her face, Eryssa approached the fallen hero and cradled his head in her lap. As she stroked his face, his eyes fluttered open."
         [/part]
 
-        {STORY_PART_HIDEL (_ "I am sorry, princess... We held him for... as long as we could... but his bodyguards... were... just too many and powerful... And then... the orcish... reinforcements arrived...")}
+        {STORY_PART_HIDEL (_ "I am sorry, my lady... We held him for... as long as we could... but his bodyguards... were... just too many and powerful... And then... the orcish... reinforcements arrived...")}
 
         [part]
             story= _ "Her face streaked with tears, Eryssa gazed imploringly at Father Morvin and Sister Thera. They simply sighed and shook their heads. It was too late to save Hidel. In a broken voice Eryssa addressed him:"
@@ -44,7 +44,7 @@
 
         {STORY_PART_ERYSSA (_ "Hidel, I am sorry. I have sent you to your death, and I grieve.")}
 
-        {STORY_PART_HIDEL (_ "... Don’t tax yourself... princess... I have died... a warrior’s death... You should be proud...")}
+        {STORY_PART_HIDEL (_ "... Don’t tax yourself... Eryssa... I have died... a warrior’s death... You should be proud...")}
 
         {STORY_PART_HIDEL (_ "... But... there is... one thing... we... could do. We... managed to... recover the gold... Sisal... took it and... retreated south...")}
 
@@ -78,7 +78,7 @@
             story= _ "As Tallin comforted Eryssa, the rest of the party spread out and rallied the scattered elves, and tending to the wounded. This being done, they once again came before Tallin and Eryssa."
         [/part]
 
-        {STORY_PART_FATHER_MORVIN (_ "Princess... it is a hard thing, I know, but you must put your grief behind you. Or at least, put it aside for a little while. We must go quickly to the aid of Sisal and recover our gold.")}
+        {STORY_PART_FATHER_MORVIN (_ "My lady... it is a hard thing, I know, but you must put your grief behind you. Or at least, put it aside for a little while. We must go quickly to the aid of Sisal and recover our gold.")}
 
         {STORY_PART_ARTHIAN (_ "Forge your sorrow into rage, girl, and visit it on the slayers of your kinsmen. Teach them what happens to those who make an enemy of an elf.")}
 
@@ -422,7 +422,7 @@
 
         [message]
             id=Sisal
-            message= _ "Princess! You are here! How fares Hidel?"
+            message= _ "Your Highness! You are here! How fares Hidel?"
         [/message]
 
         [message]
