NR: remove Princess as a direct address

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -772,7 +772,7 @@
 
         [message]
             speaker=Hidel
-            message= _ "Princess! We have finally found you!"
+            message= _ "Your Highness! We have finally found you!"
         [/message]
 
         [message]
@@ -782,7 +782,7 @@
 
         [message]
             speaker=Hidel
-            message= _ "They are all here, princess! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands. We will follow you to the end of the world if need be."
+            message= _ "They are all here, my lady! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands. We will follow you to the end of the world if need be."
         [/message]
 
         [message]
@@ -792,7 +792,7 @@
 
         [message]
             speaker=Hidel
-            message= _ "With pleasure, Princess! Quickly men, set up a base!"
+            message= _ "With pleasure! Quickly men, set up a base!"
         [/message]
 
         [terrain]
@@ -1083,7 +1083,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "Princess! We have finally found you! Thank the Bright Gods you are free! Your father had originally sent us to rescue you."
+                    message= _ "Your Highness! We have finally found you! Thank the Bright Gods you are free! Your father had originally sent us to rescue you."
                 [/message]
 
                 [message]
@@ -1128,7 +1128,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "They are all here, princess! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands."
+                    message= _ "They are all here, my lady! Hand picked by your father — the finest and bravest elvish troops in the entire Northlands."
                 [/message]
 
                 [message]
@@ -1138,7 +1138,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "As you wish, princess."
+                    message= _ "As you wish, my lady."
                 [/message]
 
                 [message]
