THoT S3: change enemies to orcs

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg
@@ -5,7 +5,7 @@
     name= _ "Strange Allies"
     map_data="{campaigns/The_Hammer_of_Thursagan/maps/03_Strange_Allies.map}"
     {TURNS 30 28 24}
-    next_scenario=04_Invaders
+    next_scenario=04_High_Pass
     victory_when_enemies_defeated=yes
 
     {DEFAULT_SCHEDULE}
@@ -25,13 +25,6 @@
     [/story]
 
     {THOT_TRACK {JOURNEY_STAGE3}}
-
-    # Player controls Aiglondur's troops with Marth Tak's as allies;
-    # the stinger is that if Marth Tak dies, you lose. The opponent,
-    # Gothras, leads a large force of chaotic humans.  This should be
-    # a medium-sized but serious fight.  The only terrain feature
-    # fixed by storyline is a west-to-east road; player’s troops
-    # should start near its west end, enemy near the east.
 
     # wmllint: validate-off
     [side]
@@ -83,24 +76,16 @@
     [side]
         side=3
         controller=ai
-#ifdef EASY
-        recruit=Footpad, Thug, Poacher
-#endif
-#ifdef NORMAL
-        recruit=Footpad, Thug, Outlaw, Poacher
-#endif
-#ifdef HARD
-        recruit=Footpad, Thug, Outlaw, Bandit, Poacher, Trapper
-#endif
+        recruit=Orcish Grunt,Wolf Rider,Orcish Archer,Orcish Assassin
         {GOLD 280 300 340}  # BALANCE
-        team_name=bandits
-        user_team_name= _ "Bandits"
+        team_name=invaders
+        user_team_name= _ "Invaders"
         {FLAG_VARIANT6 ragged}
         {INCOME 5 7 9}
 
-        type=Outlaw
-        id=Gothras
-        name= _ "Gothras"
+        type=Orcish Slayer
+        id=Gorthas
+        name= _ "Gorthas"
         canrecruit=yes
         [modifications]
             {TRAIT_STRONG}
@@ -137,7 +122,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Help Marth-Tak defeat Gothras"
+                description= _ "Help Marth-Tak defeat Gorthas"
                 condition=win
             [/objective]
             [objective]
@@ -203,8 +188,13 @@
         [/message]
 
         [message]
-            speaker=Gothras
-            message= _ "We will fare where we will and take what we will, dog of an orc. To the Dark Gods with you and your precious ‘Alliance’."
+            speaker=Gorthas
+            message= _ "Stinkin’ weakling! No true orc would fight for somethin’ as stupid as the Alliance."
+        [/message]
+
+        [message]
+            speaker=Marth-Tak
+            message= _ "You underestimate our strength. We shall see who the true orc is after this battle is over!"
         [/message]
 
         [message]
@@ -214,7 +204,7 @@
 
         [message]
             speaker=Aiglondur
-            message= _ "I’m surprised myself that so many of the orcish tribes came over to the Alliance. Not so strange to see humans raiding us, worse luck."
+            message= _ "I’m surprised myself that so many of the orcish tribes came over to the Alliance."
         [/message]
 
         {MODIFY_UNIT (id=Marth-Tak) facing nw}
@@ -225,7 +215,7 @@
         [/message]
 
         [message]
-            speaker=Aiglondur
+            speaker=Angarthing
             message= _ "We are."
         [/message]
 
@@ -235,13 +225,8 @@
         [/message]
 
         [message]
-            speaker=Angarthing
-            message= _ "That is our duty."
-        [/message]
-
-        [message]
             speaker=Aiglondur
-            message= _ "For the Alliance! Axes up!"
+            message= _ "That is our duty. For the Alliance!"
         [/message]
     [/event]
 
@@ -264,17 +249,42 @@
     [event]
         name=die
         [filter]
-            id=Gothras
+            id=Gorthas
         [/filter]
 
         [message]
             speaker=Marth-Tak
-            message= _ "My thanks, dwarves. These bandits might have hacked a bloody swathe through the Alliance’s tribes if we had not killed them here."
+            message= _ "My thanks, dwarves. There have been many attacks on the border tribes of late, and though we have repelled them thus far, the assaults have gotten only more fierce with each passing day."
+        [/message]
+
+        [message]
+            speaker=Angarthing
+            message= _ "Indeed? What disturbs me is that these orcs bear arms and coins of dwarvish make. It intimates that this war-band was hired for this purpose."
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message= _ "Nonsense. It may very well be that these orcs defeated a garrison of dwarves and raided their supplies. You need not draw such drastic conclusions from such an insignificant encounter."
+        [/message]
+
+        [message]
+            speaker=Angarthing
+            message= _ "And what of the orcs that Aiglondur fended off at the East Gate of Knalga? Their leader’s cloak-pin bore the emblem of Kal Kartha—"
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message= _ "Several of our scouting bands were ambushed recently. These orcs must have been among those who slew our kinsmen. It is all the better we slaughtered them here!"
+        [/message]
+
+        [message]
+            speaker=Angarthing
+            message= _ "Indeed..."
         [/message]
 
         [message]
             speaker=Aiglondur
-            message= _ "My thanks to you, for proving there are orcs I can fight alongside rather than against. But we cannot linger here to celebrate; we are journeying east."
+            message= _ "What matters is that these raiders are defeated now. My thanks to you, Marth-Tak, for proving there are orcs I can fight alongside rather than against. But we cannot linger here to celebrate; we are journeying east."
         [/message]
 
         [message]
