TSG S6a: update variable name
Just in case someone somehow gets to this scenario and it breaks because I changed the variable's name

--- a/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
@@ -182,7 +182,7 @@
 
         [if]
             [variable]
-                name=has_mermen
+                name=has_merfolk
                 equals="yes"
             [/variable]
             [then]
@@ -278,7 +278,7 @@
 
         [if]
             [variable]
-                name=has_mermen
+                name=has_merfolk
                 equals="yes"
             [/variable]
             [then]
@@ -565,6 +565,6 @@
         {CLEAR_VARIABLE stored_Ethiliel}
         {CLEAR_VARIABLE stored_Hylas}
         {CLEAR_VARIABLE stored_elvish_bodyguards}
-        {CLEAR_VARIABLE has_mermen,naga_queen_sighted}
+        {CLEAR_VARIABLE has_merfolk,naga_queen_sighted}
     [/event]
 [/scenario]
