--- a/data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg
@@ -360,7 +360,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "Easily, princess. We shall move unseen through the trees, overtake him, and put an end to his flight."
+                    message= _ "Easily, Your Highness. We shall move unseen through the trees, overtake him, and put an end to his flight."
                 [/message]
 
                 [message]
@@ -380,7 +380,7 @@
 
                 [message]
                     speaker=Hidel
-                    message= _ "(<i>Raises eyebrow</i>) Very well, princess."
+                    message= _ "(<i>Raises eyebrow</i>) Very well, my lady."
                 [/message]
 
                 [kill]
