HttT: modify references to mer

--- a/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
@@ -305,7 +305,7 @@
                     [else]
                         [message]
                             speaker=Konrad
-                            message= _ "Your people have already saved me once from a watery death, noble mer, fighting by my side as undead horrors threatened to devour us. I entrust our army to your strength and protection."
+                            message= _ "Your people have already saved me once from a watery death, noble merfolk, fighting by my side as undead horrors threatened to devour us. I entrust our army to your strength and protection."
                         [/message]
                     [/else]
                 [/if]
