HttT: modify references to mer

--- a/data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg
@@ -651,7 +651,7 @@
 
         [message]
             speaker=Heldaga
-            message= _ "Death to the orcs! Come, my mer brethren, let us fight the orcs and drive them from our shores!"
+            message= _ "Death to the orcs! Come, my brethren, let us fight the orcs and drive them from our shores!"
         [/message]
     [/event]
 
