UtBS S2: dialogue tweak

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
@@ -1261,7 +1261,7 @@
 
                 [message]
                     speaker=Vengeful Lord
-                    message=_"Elf with a bow, I remember you. You thought me defeated, but I am back even more powerful than before. Death reigns eternal, your scorched bones and lifeless body will join my host."
+                    message=_"Elf of the sands, I remember you. You thought me defeated, but I am back even more powerful than before. Death reigns eternal, your scorched bones and lifeless body will join my host."
                 [/message]
 
                 [message]
