UtBS S8: Make flooding independent of player's moves

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -731,12 +731,6 @@
             [/not]
         [/filter]
 
-        [terrain]
-            x=44
-            y=52
-            terrain=Wwg
-        [/terrain]
-
         #create confused ants
 
         [unit]
@@ -793,8 +787,8 @@
 
         [remove_shroud]
             side=1
-            x=37-44,36-41
-            y=46-53,50-54
+            x=37-46
+            y=46-53
         [/remove_shroud]
 
         [if]
@@ -874,12 +868,6 @@
                 type=Dust Devil
             [/not]
         [/filter]
-
-        [terrain]
-            x=36,37
-            y=43,43
-            terrain=Wwg
-        [/terrain]
 
         [remove_shroud]
             side=1
@@ -1263,12 +1251,6 @@
             terrain=Uu
         [/terrain]
 
-        [terrain]
-            x=8,8
-            y=48,49
-            terrain=Wwg
-        [/terrain]
-
         [redraw]
             clear_shroud=yes
         [/redraw]
@@ -1522,12 +1504,6 @@
             side=1
         [/filter]
 
-        [terrain]
-            x=8,8
-            y=48,49
-            terrain=Wwg
-        [/terrain]
-
         [remove_shroud]
             x=5-11,12-15
             y=46-51,46-49
@@ -1576,14 +1552,6 @@
             y=39-45,40-45
             side=1
         [/remove_shroud]
-
-        #activate flooding of dining cavern
-
-        [terrain]
-            x=8,8
-            y=48,49
-            terrain=Wwg
-        [/terrain]
 
         [message]
             speaker=unit
@@ -1831,14 +1799,6 @@
             y=38-41
             side=1
         [/remove_shroud]
-
-        #activate flooding of dining cavern
-
-        [terrain]
-            x=8,8
-            y=48,49
-            terrain=Wwg
-        [/terrain]
 
         {CHECK_EXPLORER}
 
@@ -2273,24 +2233,6 @@
                         y=31,32
                         terrain=Uu
                     [/terrain]
-
-                    [terrain]
-                        x=1
-                        y=33
-                        terrain=Wo
-                    [/terrain]
-
-                    [terrain]
-                        x=2,2,3
-                        y=33,34,35
-                        terrain=Wwg
-                    [/terrain]
-
-                    [remove_shroud]
-                        x=2-5
-                        y=33-36
-                        side=1
-                    [/remove_shroud]
 
                     [redraw]
                     [/redraw]
@@ -4174,6 +4116,18 @@
         [remove_event]
             id=do_flooding
         [/remove_event]
+
+        # flood the secret room
+        [terrain]
+            x=17-19,   16,   20,18,18
+            y=28-34,28-30,28-30,27,35
+            terrain=Wo
+        [/terrain]
+
+        [remove_item]
+            x=17-19,   16,   20,18,18
+            y=28-34,28-30,28-30,27,35
+        [/remove_item]
 
         # flood rest of side passage with deep water
         [terrain]
