--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -1270,8 +1270,7 @@
         name=moveto
 
         [filter]
-            x=19-24,21
-            y=45-47,48
+            x,y=23,48
             side=1
             [not]
                 type=Dust Devil
@@ -1308,6 +1307,13 @@
             x,y=23,48
         [/remove_item]
 
+        [terrain]
+            x=22,23
+            y=47,47
+            layer=overlay
+            terrain="^"
+        [/terrain]
+
         [object]
             [filter]
                 x=$x1
@@ -1342,8 +1348,46 @@
         {NAMED_UNIT 3 (Necrophage) 24 46 () ( _ "Gate Guard") (upkeep=free)}
 #endif
 
+        {NAMED_UNIT 3 (Skeleton) 19 47 () ( _ "Gate Guard") (upkeep=free)}
+        {NAMED_UNIT 3 (Revenant) 20 45 () ( _ "Gate Guard") (upkeep=free)}
+#ifdef HARD
+        {NAMED_UNIT 3 (Revenant) 22 45 () ( _ "Gate Guard") (upkeep=free)}
+#else
         {NAMED_UNIT 3 (Skeleton) 22 45 () ( _ "Gate Guard") (upkeep=free)}
-        {NAMED_UNIT 3 (Skeleton) 20 46 () ( _ "Gate Guard") (upkeep=free)}
+#endif
+
+        [store_unit]
+            [filter]
+                side=3
+                x=18-24
+                y=45-48
+            [/filter]
+
+            variable=guards
+        [/store_unit]
+
+        [foreach]
+            array=guards
+
+            [do]
+                [object]
+                    [filter]
+                        id=$this_item.id
+                    [/filter]
+                    silent=yes
+                    [effect]
+                        apply_to=movement_costs
+                        replace=yes
+                        [movement_costs]
+                            cave={UNREACHABLE}
+                            flat={UNREACHABLE}
+                        [/movement_costs]
+                    [/effect]
+                [/object]
+            [/do]
+        [/foreach]
+
+        {CLEAR_VARIABLE guards}
     [/event]
 
     # Event 6: Enter central cave
