UtBS: Add "Turns run out" objectives
Also make new objectives pop up when outlaw leader
is killed in S2

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
@@ -225,6 +225,8 @@
                 condition=lose
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
@@ -1547,6 +1549,9 @@
             animate=no
             fire_event=no
         [/kill]
+
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     #if Kaleh moves to north edge of map but outlaw leader isn't defeated
