--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -374,6 +374,7 @@
                 [/show_if]
             [/objective]
 
+            {TURNS_RUN_OUT}
 
             [gold_carryover]
                 bonus=yes
