--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -467,6 +467,8 @@
                 [/show_if]
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [note]
                 description= _  "The messenger is the leader of the special white colored units"
                 [show_if]
