--- a/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
@@ -419,6 +419,8 @@
                 condition=lose
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [gold_carryover]
                 carryover_percentage=0
             [/gold_carryover]
