--- a/data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg
@@ -163,6 +163,8 @@
                 [/show_if]
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
