--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg
@@ -200,6 +200,8 @@ _ "These undead trolls fight again in death as they did in life, except this tim
                 condition=lose
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
