--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -41,7 +41,7 @@
         gold=0
         income=0
         controller=ai
-        shroud=yes
+        shroud=no
         fog=no
         hidden=yes
         team_name=trolls
