UtBS S6b: Make dwarves speak when the wall is destroyed

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
@@ -474,7 +474,7 @@
             {NAMED_NOTRAIT_UNIT 2 (Dwarvish Thunderer) 21 34 (Dwarf Guard) ( _ "Dwarf Guard")}
             {NAMED_NOTRAIT_UNIT 2 (Dwarvish Thunderer) 23 34 () ( _ "Dwarf Guard")}
 #else
-            {NAMED_NOTRAIT_UNIT 2 (Dwarvish Thunderguard) 21 34 () ( _ "Dwarf Guard")}
+            {NAMED_NOTRAIT_UNIT 2 (Dwarvish Thunderguard) 21 34 (Dwarf Guard) ( _ "Dwarf Guard")}
             {NAMED_NOTRAIT_UNIT 2 (Dwarvish Thunderguard) 23 34 () ( _ "Dwarf Guard")}
 #endif
 
