--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
@@ -332,19 +332,7 @@
         [/unit]
 
         #Troll ally shaman, doesn't move
-        [unit]
-            type=Troll Shaman
-            id=Zurg
-            name= _ "Zurg"
-            x=33
-            y=30
-            side=3
-            ai_special=guardian
-            [modifications]
-                {TRAIT_STRONG}
-                {TRAIT_RESILIENT}
-            [/modifications]
-        [/unit]
+        {NAMED_NOTRAIT_UNIT 3 (Troll Shaman) 33 30 (Zurg) ( _ "Zurg")} {GUARDIAN}
 
         # Event 3: Tunnel cave-ins
 
