DiD S1: update objectives

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -194,6 +194,10 @@
             [/objective]
             [objective]
                 condition=lose
+                description= _ "Death of Dela Keshar"
+            [/objective]
+            [objective]
+                condition=lose
                 description= _ "Death of Drogan"
             [/objective]
 
