UtBS S5: add turns run out to objectives

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -314,6 +314,8 @@
                 condition=lose
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
@@ -797,6 +799,8 @@
             description= _ "Death of Zhul"
             condition=lose
         [/objective]
+
+        {TURNS_RUN_OUT}
 
         [gold_carryover]
             bonus=yes
@@ -1370,6 +1374,8 @@
                             condition=lose
                         [/objective]
 
+                        {TURNS_RUN_OUT}
+
                         [gold_carryover]
                             bonus=yes
                             carryover_percentage=40
@@ -1435,6 +1441,8 @@
                             description= _ "Death of Gnarl"
                             condition=lose
                         [/objective]
+
+                        {TURNS_RUN_OUT}
 
                         [gold_carryover]
                             bonus=yes
