UtBS S8: add dialogue for flooding events

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -2275,8 +2275,8 @@
                     [/sound]
 
                     [terrain]
-                        x=9,9
-                        y=31,32
+                        x=9,9,3
+                        y=31,32,33
                         terrain=Uu
                     [/terrain]
 
@@ -2293,10 +2293,24 @@
                         message= _ "I can’t even begin to fathom what these cultists were up to. But more importantly, which way do we go?"
                     [/message]
 
-                    [message]
-                        speaker=unit
-                        message= _ "Look, the western passage is already flooding! It must connect back somehow to the other tunnels."
-                    [/message]
+                    [if]
+                        [variable]
+                            name=turn_number
+                            less_than=31
+                        [/variable]
+                        [then]
+                            [message]
+                                speaker=unit
+                                message= _ "I think I hear the sound of rushing water down the western passage; it might already be flooding! It must connect back somehow to the other tunnels."
+                            [/message]
+                        [/then]
+                        [else]
+                            [message]
+                                speaker=unit
+                                message= _ "Look, the western passage is already flooding! It must connect back somehow to the other tunnels."
+                            [/message]
+                        [/else]
+                    [/if]
 
                     [message]
                         speaker=Nym
@@ -2543,6 +2557,11 @@
                 [/and]
                 [then]
                     # Nym is blocked by deep water
+                    [message]
+                        speaker=Nym
+                        message= _ "Kaleh? Zhul? I’m still stuck back here..."
+                        image=portraits/nym_moody.png
+                    [/message]
 
                     [endlevel]
                         result=defeat
@@ -2589,6 +2608,10 @@
                         [/variable]
                         [then]
                             # Kaleh is blocked by deep water
+                            [message]
+                                speaker=Kaleh
+                                message= _ "Ack, I’m surrounded by water!"
+                            [/message]
 
                             [endlevel]
                                 result=defeat
